frontend/test/should_fail/negative_002.grg
test negTest
{
    negative {
        if { x == y; }
    }
}
